Checkpoint before NanoVG removal — all current session work (BindPopup, KeySounds, Keychron K6 layout, hand presets, account manager, main-menu revert, etc.)
Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>